--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -11,8 +11,13 @@
   box-sizing: border-box;
   direction: rtl;
   font-family: "Vazirmatn" !important;
-  background: linear-gradient(90deg, rgba(242,207,63,1) 0%, rgba(171,171,171,1) 55%, rgba(140,138,142,1) 100%) !important;
 }
 body {
+  background: linear-gradient(90deg, rgba(242,207,63,1) 0%, rgba(171,171,171,1) 55%, rgba(140,138,142,1) 100%) !important;
   font-family: "Vazirmatn" !important;
+}
+input {
+  width: 200px;
+  height: 35px;
+
 }
