--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -1,18 +1,38 @@
-.Login{
+.Login {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
-.box-login{
+
+.name-god {
+    margin: 15px;
+    font-weight: 400;
+    color: white;
+    cursor: context-menu;
+}
+
+.box-login {
+    margin: 5px;
     width: 300px;
     height: 350px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     background-color: #f6f6f6;
     background-image: linear-gradient(315deg, #f6f6f6 0%, #e9e9e9 74%);
     border-radius: 30px;
-    box-shadow: ;
+    box-shadow: 0.2em 0.2em 0.7em rgba(0, 0, 0, 0.452)
+}
+
+.input-box {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.button-login {
+    margin-top: 35px;
 }
