--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -15,7 +15,11 @@
 body {
   background: linear-gradient(90deg, rgba(242,207,63,1) 0%, rgba(171,171,171,1) 55%, rgba(140,138,142,1) 100%) !important;
   font-family: "Vazirmatn" !important;
+  height: 100%;
 }
+.container {
+  height: 100%;
+}     
 input {
   width: 200px;
   height: 35px;
@@ -48,10 +52,12 @@ button{
   font-size: 16px;
   border-radius: 16px;
   box-shadow: 0.2em 0.2em 0.7em rgba(0, 0, 0, 0.452);
+  transition: background-color 0.5 ease-out;
 }
 button:hover{
   background-color: #FFC300;
   color: white;
+  
 }
 a {
  text-decoration: none;
