--- a/src/Css/Register.css
+++ b/src/Css/Register.css
@@ -1,9 +1,8 @@
-.Login {
+.Register{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: max-content;
     height: 95vh;
 }
 
@@ -14,10 +13,10 @@
     cursor: context-menu;
 }
 
-.box-login {
+.box-register {
     margin: 5px;
     width: 300px;
-    height: 350px;
+    height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,13 +33,13 @@
     padding: 10px;
 }
 
-.button-login {
+.button-register {
     margin-top: 30px;
     margin-bottom: 10px;
 }
 
 @media screen and (max-width: 992px) {
-    .box-login {
+    .box-register {
         margin: 0px;
         width: 250px;
     }
