--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -12,6 +12,7 @@
     font-weight: 400;
     color: white;
     cursor: context-menu;
+    text-shadow: 1px 1px 2px black;
 }
 
 .box-login {
@@ -37,6 +38,28 @@
 .button-login {
     margin-top: 30px;
     margin-bottom: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    padding: 8px;
+    background-color: #FF8400;
+    width: 200px;
+    border: none;
+    font-size: 16px;
+    border-radius: 16px;
+    box-shadow: 0.2em 0.2em 0.7em rgba(0, 0, 0, 0.452);
+    transition: background-color 0.3s ease-out;
+}
+.button-login:hover{
+    color: white !important;
+}
+.button-login-link{
+    text-decoration: none !important;
+}
+.text-important{
+    color: red;
 }
 
 @media screen and (max-width: 992px) {
