--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -5,6 +5,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 * {
   margin: 0px;
   padding: 0px;
@@ -12,14 +13,17 @@
   direction: rtl;
   font-family: "Vazirmatn" !important;
 }
+
 body {
-  background: linear-gradient(90deg, rgba(242,207,63,1) 0%, rgba(171,171,171,1) 55%, rgba(140,138,142,1) 100%) !important;
+  background: linear-gradient(90deg, rgba(242, 207, 63, 1) 0%, rgba(171, 171, 171, 1) 55%, rgba(140, 138, 142, 1) 100%) !important;
   font-family: "Vazirmatn" !important;
   height: 100%;
 }
+
 .container {
   height: 100%;
-}     
+}
+
 input {
   width: 200px;
   height: 35px;
@@ -29,18 +33,19 @@ input {
   padding: 8px;
   box-shadow: 0.2em 0.2em 0.7em rgba(0, 0, 0, 0.452), inset 0 0 0.7em rgba(163, 241, 215, 0.178);
 }
-input:focus{
+
+input:focus {
   outline: none;
   background-color: rgba(251, 255, 254, 0.322);
 }
 
-label{
+label {
   font-size: small;
   margin-bottom: 5px;
 }
 
-button{
-  cursor:pointer;
+button {
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,30 +59,35 @@ button{
   box-shadow: 0.2em 0.2em 0.7em rgba(0, 0, 0, 0.452);
   transition: background-color 0.3s ease-out;
 }
-button:hover{
+
+button:hover {
   background-color: #FFC300;
   color: white;
-  
 }
+
 a {
- text-decoration: none;
- color:black
+  text-decoration: none;
+  color: black
 }
-a:hover{
+
+a:hover {
   text-decoration: underline;
   color: #494949;
   cursor: pointer;
 }
 
-.font-size-25{
+.font-size-25 {
   font-size: 25px !important;
 }
-.font-size-20{
+
+.font-size-20 {
   font-size: 20px !important;
 }
-.font-size-18{
+
+.font-size-18 {
   font-size: 18px !important;
 }
-.font-size-14{
+
+.font-size-14 {
   font-size: 14px !important;
 }
