--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -2,6 +2,7 @@
     margin-top: 75px;
     position: fixed;
     right: 0;
+    height: 100vh;
 }
 
 .icon-filter {
@@ -28,6 +29,7 @@
     transition: transform 0.5s ease-in-out;
     transform: translate(0px);
     box-shadow: 0.1em 0.2em 0.2em rgba(0, 0, 0, 0.452);
+    height: 100vh;
 }
 
 .close-filter {
@@ -37,4 +39,82 @@
     transition: transform 0.5s ease-in-out;
     transform: translate(275px);
     box-shadow: 0.1em 0.2em 0.2em rgba(0, 0, 0, 0.452);
+    height: 100vh;
 }
+.title-filter {
+    text-decoration: none !important;
+    cursor: default !important;
+    font-size: 20px;
+}
+.title-filter:hover{
+    color:black !important;
+}
+
+
+
+
+
+
+.text-filter {
+    color: white;
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .text-filter input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .text-filter:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .text-filter input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .text-filter input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .text-filter .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
