--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -1,4 +1,4 @@
-.Header{
+.Header {
     width: 100%;
     height: 75px;
     background-color: #3A4750;
@@ -9,60 +9,197 @@
     top: 0;
     right: 0;
 }
-.rigth-header-des{
+
+.rigth-header-des {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 80%;
 }
-.rigth-header-Mobile{
+
+.rigth-header-Mobile {
     display: none;
 }
-.left-header{
+
+.left-header {
     display: flex;
     justify-content: start;
     align-items: center;
-    width:inherit;
+    width: inherit;
     height: 50px;
     width: 20%;
 }
-.text-header{
+
+.text-header {
     display: flex;
     justify-content: center;
     align-items: center;
-    color:white ;
+    color: white;
     height: 50px;
     padding: 5px;
     margin: 0 10px;
     width: 95px;
     border-radius: 2px;
 }
-.text-header:hover{
+
+.text-header:hover {
     color: white;
     text-decoration: none;
     background-color: #585d61;
 }
-.name-user{
+
+.name-user {
     margin: 0 0 0 20px;
     color: white;
     cursor: pointer;
 }
-.avatar{
+
+.avatar {
     width: 35px !important;
     height: 35px !important;
     color: white;
     cursor: pointer
 }
+
 @media screen and (max-width:992px) {
-    .rigth-header-des{
+    .rigth-header-des {
         display: none;
     }
-    .rigth-header-Mobile{
+
+    .rigth-header-Mobile {
         display: flex;
         width: 50%;
     }
-    .left-header{  
+
+    .left-header {
         width: 50%;
     }
+
+    .container {
+        max-width: 1050px;
+        width: 90%;
+        margin: auto;
+    }
+
+    .navbar {
+        width: 100%;
+        box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
+    }
+
+    .nav-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 62px;
+    }
+
+    .navbar .menu-items {
+        display: flex;
+    }
+
+    .navbar .nav-container li {
+        list-style: none;
+    }
+
+    .navbar .nav-container a {
+        text-decoration: none;
+        color: #0e2431;
+        font-weight: 500;
+        font-size: 1.2rem;
+        padding: 0.7rem;
+    }
+
+    .navbar .nav-container a:hover {
+        font-weight: bolder;
+    }
+
+    .nav-container {
+        display: block;
+        position: relative;
+        height: 60px;
+    }
+
+    .nav-container .checkbox {
+        position: absolute;
+        display: block;
+        height: 32px;
+        width: 32px;
+        top: 20px;
+        left: 20px;
+        z-index: 5;
+        opacity: 0;
+        cursor: pointer;
+    }
+
+    .nav-container .hamburger-lines {
+        display: block;
+        height: 26px;
+        width: 32px;
+        position: absolute;
+        top: 17px;
+        left: 20px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .nav-container .hamburger-lines .line {
+        display: block;
+        height: 4px;
+        width: 100%;
+        border-radius: 10px;
+        background: #ffffff;
+    }
+
+    .nav-container .hamburger-lines .line1 {
+        transform-origin: 0% 0%;
+        transition: transform 0.4s ease-in-out;
+    }
+
+    .nav-container .hamburger-lines .line2 {
+        transition: transform 0.2s ease-in-out;
+    }
+
+    .nav-container .hamburger-lines .line3 {
+        transform-origin: 0% 100%;
+        transition: transform 0.4s ease-in-out;
+    }
+
+    .menu-items {
+        padding-top: 70px;
+        box-shadow: inset 0 0 2000px rgba(0, 0, 0, 0.5);
+        height: auto;
+        width: 100%;
+        display: none;
+        flex-direction: column;
+        margin-left: -40px;
+        padding-left: 50px;
+        transition: box-shadow 0.5s ease-in-out;
+        text-align: center;
+    }
+
+    .navbar .menu-items li {
+        margin-bottom: 1.2rem;
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
+
+    .nav-container input[type="checkbox"]:checked~.menu-items {
+        display: flex;
+    }
+
+    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+        transform: rotate(45deg);
+    }
+
+    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+        transform: scaleY(0);
+    }
+
+    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+        transform: rotate(-45deg);
+    }
+
 
 }
