--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -75,75 +75,38 @@
         width: 50%;
     }
 
-    .container {
-        max-width: 1050px;
-        width: 90%;
-        margin: auto;
-    }
-
     .navbar {
         width: 100%;
-        box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
     }
 
-    .nav-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 62px;
-    }
-
-    .navbar .menu-items {
-        display: flex;
-    }
-
-    .navbar .nav-container Link {
-        list-style: none;
-    }
-
-    .navbar .nav-container a {
-        text-decoration: none;
-        color: #0e2431;
-        font-weight: 500;
-        font-size: 1.2rem;
-        padding: 0.7rem;
-    }
-
-    .navbar .nav-container a:hover {
-        font-weight: bolder;
-    }
-
-    .nav-container {
-        display: block;
-        height: 75px;
-    }
-
-    .nav-container .checkbox {
+    .checkbox {
         position: absolute;
         display: block;
+        justify-content: center;
+        align-items: center;
         height: 32px;
         width: 32px;
         top: 20px;
-        left: 20px;
+        right: 20px;
         z-index: 5;
         opacity: 0;
         cursor: pointer;
     }
 
-    .nav-container .hamburger-lines {
+    .hamburger-lines {
         display: block;
         height: 26px;
         width: 32px;
         position: absolute;
-        top: 17px;
-        left: 20px;
+        top: 20px;
+        right: 20px;
         z-index: 2;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
 
-    .nav-container .hamburger-lines .line {
+    .hamburger-lines .line {
         display: block;
         height: 4px;
         width: 100%;
@@ -151,64 +114,71 @@
         background: #ffffff;
     }
 
-    .nav-container .hamburger-lines .line1 {
+    .hamburger-lines .line1 {
         transform-origin: 0% 0%;
         transition: transform 0.4s ease-in-out;
     }
 
-    .nav-container .hamburger-lines .line2 {
+    .hamburger-lines .line2 {
         transition: transform 0.2s ease-in-out;
     }
 
-    .nav-container .hamburger-lines .line3 {
+    .hamburger-lines .line3 {
         transform-origin: 0% 100%;
         transition: transform 0.4s ease-in-out;
     }
 
-    
+
     .navbar .menu-items Link {
         margin-bottom: 1.2rem;
         font-size: 1.5rem;
         font-weight: 500;
     }
 
-    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+    input[type="checkbox"]:checked~.hamburger-lines .line1 {
         transform: rotate(45deg);
     }
 
-    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+    input[type="checkbox"]:checked~.hamburger-lines .line2 {
         transform: scaleY(0);
     }
-    
-    .nav-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+
+    input[type="checkbox"]:checked~.hamburger-lines .line3 {
         transform: rotate(-45deg);
     }
-    
+
     .menu-items-true {
         margin-top: 75px;
-        box-shadow: inset 0 0 2000px rgba(0, 0, 0,10);
+        background-color: #000000e0;
         height: auto;
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin-left: -40px;
-        padding-left: 50px;
-        transition: flex 0.5s ease-in-out;
         text-align: center;
         position: absolute;
-
+        z-index: 10;
+        opacity: 1;
+        visibility: visible;
+        transition: all 0.5s ease-in-out
     }
+     
     .menu-items-false {
-        display: none;
+        width: 100%;
+        opacity: 0;
+        position: absolute;
+        visibility: hidden;
+        background-color: #000000e0;
+        transition: all 0.5s ease-in-out
     }
-    .text-header-mobile{
+
+    .text-header-mobile {
         display: flex;
         justify-content: right;
         align-items: center;
-            color: white;
-            height: 50px;
-            padding: 5px;
-            margin: 0 40px;
-            width: 100%;
+        color: white;
+        height: 50px;
+        padding: 5px;
+        margin: 0 40px;
+        width: auto;
     }
 }
